parser_bison.output
Terminals unused in grammar

   T_PLUS_EQ
   T_MINUS_EQ
   T_TIMES_EQ
   T_DIVIDE_EQ
   T_DOUBLE_PERIOD
   T_REPEAT
   T_UNTIL
   T_INVALID


Grammar

    0 $accept: input T_EOF

    1 input: T_PROGRAM T_ID T_SEMICOLON force_initialization block_body T_PERIOD

    2 force_initialization: /* empty */

    3 block_body: opt_constant_definition_part opt_variable_definition_part star_procedure_definition compound_statement

    4 opt_constant_definition_part: /* empty */
    5                             | constant_definition_part

    6 opt_variable_definition_part: /* empty */
    7                             | variable_definition_part

    8 star_procedure_definition: /* empty */
    9                          | procedure_definition star_procedure_definition

   10 constant_definition_part: T_CONST plus_constant_definition

   11 plus_constant_definition: constant_definition
   12                         | constant_definition plus_constant_definition

   13 constant_definition: T_ID T_EQ T_INT_CONST T_SEMICOLON
   14                    | T_ID T_EQ T_REAL_CONST T_SEMICOLON
   15                    | T_ID T_EQ T_BOOLEAN_CONST T_SEMICOLON

   16 variable_definition_part: T_VAR plus_variable_definition

   17 plus_variable_definition: variable_definition
   18                         | variable_definition plus_variable_definition

   19 variable_definition: variable_group T_SEMICOLON

   20 variable_group: T_ID star_comma_id T_COLON type

   21 star_comma_id: /* empty */
   22              | T_COMMA T_ID star_comma_id

   23 type: T_INTEGER
   24     | T_REAL
   25     | T_BOOLEAN

   26 procedure_definition: procedure_block block_body T_SEMICOLON

   27 procedure_block: init_procedure opt_brc_formal_parameter_list_brc T_SEMICOLON

   28 init_procedure: T_PROCEDURE T_ID

   29 opt_brc_formal_parameter_list_brc: /* empty */
   30                                  | T_LBRACKET formal_parameter_list T_RBRACKET

   31 formal_parameter_list: parameter_definition star_smc_parameter_definition

   32 star_smc_parameter_definition: /* empty */
   33                              | T_SEMICOLON parameter_definition star_smc_parameter_definition

   34 parameter_definition: variable_group

   35 statement: /* empty */
   36          | procedure_statement
   37          | if_statement
   38          | while_statement
   39          | compound_statement
   40          | assignment_statement

   41 assignment_statement: variable_access T_ASSIGN expression

   42 procedure_statement: T_ID opt_brc_actual_parameter_list_brc

   43 opt_brc_actual_parameter_list_brc: /* empty */
   44                                  | T_LBRACKET actual_parameter_list T_RBRACKET

   45 actual_parameter_list: actual_parameter star_comma_actual_parameter

   46 star_comma_actual_parameter: /* empty */
   47                            | T_COMMA actual_parameter star_comma_actual_parameter

   48 actual_parameter: expression

   49 if_statement: T_IF expression T_THEN statement
   50             | T_IF expression T_THEN statement T_ELSE statement

   51 while_statement: T_WHILE expression T_DO statement

   52 compound_statement: T_BEGIN statement star_comma_statement T_END

   53 star_comma_statement: /* empty */
   54                     | T_SEMICOLON statement star_comma_statement

   55 expression: simple_expression opt_relational_operator_simple_expression

   56 opt_relational_operator_simple_expression: /* empty */
   57                                          | relational_operator simple_expression

   58 relational_operator: T_LT
   59                    | T_EQ
   60                    | T_GT
   61                    | T_LEQ
   62                    | T_DIF
   63                    | T_GEQ

   64 simple_expression: sign_operator term star_adding_operator_term
   65                  | term star_adding_operator_term

   66 sign_operator: T_PLUS
   67              | T_MINUS

   68 star_adding_operator_term: /* empty */
   69                          | adding_operator term star_adding_operator_term

   70 adding_operator: T_PLUS
   71                | T_MINUS
   72                | T_OR

   73 term: factor star_multiplying_operator_factor

   74 star_multiplying_operator_factor: /* empty */
   75                                 | multiplying_operator factor star_multiplying_operator_factor

   76 multiplying_operator: T_TIMES
   77                     | T_DIV
   78                     | T_MOD
   79                     | T_AND
   80                     | T_DIVIDE

   81 factor: constant
   82       | T_LBRACKET expression T_RBRACKET
   83       | T_NOT factor

   84 variable_access: T_ID

   85 constant: T_INT_CONST
   86         | T_REAL_CONST
   87         | T_BOOLEAN_CONST
   88         | variable_access


Terminals, with rules where they appear

T_EOF (0) 0
T_ID (1) 1 13 14 15 20 22 28 42 84
T_INT_CONST (2) 13 85
T_REAL_CONST (3) 14 86
T_BOOLEAN_CONST (4) 15 87
T_PROGRAM (5) 1
T_PROCEDURE (6) 28
T_BEGIN (7) 52
T_END (8) 52
T_IF (9) 49 50
T_THEN (10) 49 50
T_ELSE (11) 50
T_WHILE (12) 51
T_DO (13) 51
T_ASSIGN (14) 41
T_PLUS (15) 66 70
T_MINUS (16) 67 71
T_TIMES (17) 76
T_DIVIDE (18) 80
T_DIV (19) 77
T_MOD (20) 78
T_PLUS_EQ (21)
T_MINUS_EQ (22)
T_TIMES_EQ (23)
T_AND (24) 79
T_OR (25) 72
T_NOT (26) 83
T_DIVIDE_EQ (27)
T_VAR (28) 16
T_INTEGER (29) 23
T_REAL (30) 24
T_BOOLEAN (31) 25
T_COLON (32) 20
T_SEMICOLON (33) 1 13 14 15 19 26 27 33 54
T_COMMA (34) 22 47
T_PERIOD (35) 1
T_DOUBLE_PERIOD (36)
T_LBRACKET (37) 30 44 82
T_RBRACKET (38) 30 44 82
T_CONST (39) 10
T_REPEAT (40)
T_UNTIL (41)
T_EQ (42) 13 14 15 59
T_DIF (43) 62
T_LT (44) 58
T_LEQ (45) 61
T_GT (46) 60
T_GEQ (47) 63
T_INVALID (255)
error (256)


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
input (52)
    on left: 1, on right: 0
force_initialization (53)
    on left: 2, on right: 1
block_body (54)
    on left: 3, on right: 1 26
opt_constant_definition_part (55)
    on left: 4 5, on right: 3
opt_variable_definition_part (56)
    on left: 6 7, on right: 3
star_procedure_definition (57)
    on left: 8 9, on right: 3 9
constant_definition_part (58)
    on left: 10, on right: 5
plus_constant_definition (59)
    on left: 11 12, on right: 10 12
constant_definition (60)
    on left: 13 14 15, on right: 11 12
variable_definition_part (61)
    on left: 16, on right: 7
plus_variable_definition (62)
    on left: 17 18, on right: 16 18
variable_definition (63)
    on left: 19, on right: 17 18
variable_group (64)
    on left: 20, on right: 19 34
star_comma_id (65)
    on left: 21 22, on right: 20 22
type (66)
    on left: 23 24 25, on right: 20
procedure_definition (67)
    on left: 26, on right: 9
procedure_block (68)
    on left: 27, on right: 26
init_procedure (69)
    on left: 28, on right: 27
opt_brc_formal_parameter_list_brc (70)
    on left: 29 30, on right: 27
formal_parameter_list (71)
    on left: 31, on right: 30
star_smc_parameter_definition (72)
    on left: 32 33, on right: 31 33
parameter_definition (73)
    on left: 34, on right: 31 33
statement (74)
    on left: 35 36 37 38 39 40, on right: 49 50 51 52 54
assignment_statement (75)
    on left: 41, on right: 40
procedure_statement (76)
    on left: 42, on right: 36
opt_brc_actual_parameter_list_brc (77)
    on left: 43 44, on right: 42
actual_parameter_list (78)
    on left: 45, on right: 44
star_comma_actual_parameter (79)
    on left: 46 47, on right: 45 47
actual_parameter (80)
    on left: 48, on right: 45 47
if_statement (81)
    on left: 49 50, on right: 37
while_statement (82)
    on left: 51, on right: 38
compound_statement (83)
    on left: 52, on right: 3 39
star_comma_statement (84)
    on left: 53 54, on right: 52 54
expression (85)
    on left: 55, on right: 41 48 49 50 51 82
opt_relational_operator_simple_expression (86)
    on left: 56 57, on right: 55
relational_operator (87)
    on left: 58 59 60 61 62 63, on right: 57
simple_expression (88)
    on left: 64 65, on right: 55 57
sign_operator (89)
    on left: 66 67, on right: 64
star_adding_operator_term (90)
    on left: 68 69, on right: 64 65 69
adding_operator (91)
    on left: 70 71 72, on right: 69
term (92)
    on left: 73, on right: 64 65 69
star_multiplying_operator_factor (93)
    on left: 74 75, on right: 73 75
multiplying_operator (94)
    on left: 76 77 78 79 80, on right: 75
factor (95)
    on left: 81 82 83, on right: 73 75 83
variable_access (96)
    on left: 84, on right: 41 88
constant (97)
    on left: 85 86 87 88, on right: 81


state 0

    0 $accept: . input T_EOF

    T_PROGRAM  shift, and go to state 1

    input  go to state 2


state 1

    1 input: T_PROGRAM . T_ID T_SEMICOLON force_initialization block_body T_PERIOD

    T_ID  shift, and go to state 3


state 2

    0 $accept: input . T_EOF

    T_EOF  shift, and go to state 4


state 3

    1 input: T_PROGRAM T_ID . T_SEMICOLON force_initialization block_body T_PERIOD

    T_SEMICOLON  shift, and go to state 5


state 4

    0 $accept: input T_EOF .

    $default  accept


state 5

    1 input: T_PROGRAM T_ID T_SEMICOLON . force_initialization block_body T_PERIOD

    $default  reduce using rule 2 (force_initialization)

    force_initialization  go to state 6


state 6

    1 input: T_PROGRAM T_ID T_SEMICOLON force_initialization . block_body T_PERIOD

    T_CONST  shift, and go to state 7

    $default  reduce using rule 4 (opt_constant_definition_part)

    block_body                    go to state 8
    opt_constant_definition_part  go to state 9
    constant_definition_part      go to state 10


state 7

   10 constant_definition_part: T_CONST . plus_constant_definition

    T_ID  shift, and go to state 11

    plus_constant_definition  go to state 12
    constant_definition       go to state 13


state 8

    1 input: T_PROGRAM T_ID T_SEMICOLON force_initialization block_body . T_PERIOD

    T_PERIOD  shift, and go to state 14


state 9

    3 block_body: opt_constant_definition_part . opt_variable_definition_part star_procedure_definition compound_statement

    T_VAR  shift, and go to state 15

    $default  reduce using rule 6 (opt_variable_definition_part)

    opt_variable_definition_part  go to state 16
    variable_definition_part      go to state 17


state 10

    5 opt_constant_definition_part: constant_definition_part .

    $default  reduce using rule 5 (opt_constant_definition_part)


state 11

   13 constant_definition: T_ID . T_EQ T_INT_CONST T_SEMICOLON
   14                    | T_ID . T_EQ T_REAL_CONST T_SEMICOLON
   15                    | T_ID . T_EQ T_BOOLEAN_CONST T_SEMICOLON

    T_EQ  shift, and go to state 18


state 12

   10 constant_definition_part: T_CONST plus_constant_definition .

    $default  reduce using rule 10 (constant_definition_part)


state 13

   11 plus_constant_definition: constant_definition .
   12                         | constant_definition . plus_constant_definition

    T_ID  shift, and go to state 11

    $default  reduce using rule 11 (plus_constant_definition)

    plus_constant_definition  go to state 19
    constant_definition       go to state 13


state 14

    1 input: T_PROGRAM T_ID T_SEMICOLON force_initialization block_body T_PERIOD .

    $default  reduce using rule 1 (input)


state 15

   16 variable_definition_part: T_VAR . plus_variable_definition

    T_ID  shift, and go to state 20

    plus_variable_definition  go to state 21
    variable_definition       go to state 22
    variable_group            go to state 23


state 16

    3 block_body: opt_constant_definition_part opt_variable_definition_part . star_procedure_definition compound_statement

    T_PROCEDURE  shift, and go to state 24

    $default  reduce using rule 8 (star_procedure_definition)

    star_procedure_definition  go to state 25
    procedure_definition       go to state 26
    procedure_block            go to state 27
    init_procedure             go to state 28


state 17

    7 opt_variable_definition_part: variable_definition_part .

    $default  reduce using rule 7 (opt_variable_definition_part)


state 18

   13 constant_definition: T_ID T_EQ . T_INT_CONST T_SEMICOLON
   14                    | T_ID T_EQ . T_REAL_CONST T_SEMICOLON
   15                    | T_ID T_EQ . T_BOOLEAN_CONST T_SEMICOLON

    T_INT_CONST      shift, and go to state 29
    T_REAL_CONST     shift, and go to state 30
    T_BOOLEAN_CONST  shift, and go to state 31


state 19

   12 plus_constant_definition: constant_definition plus_constant_definition .

    $default  reduce using rule 12 (plus_constant_definition)


state 20

   20 variable_group: T_ID . star_comma_id T_COLON type

    T_COMMA  shift, and go to state 32

    $default  reduce using rule 21 (star_comma_id)

    star_comma_id  go to state 33


state 21

   16 variable_definition_part: T_VAR plus_variable_definition .

    $default  reduce using rule 16 (variable_definition_part)


state 22

   17 plus_variable_definition: variable_definition .
   18                         | variable_definition . plus_variable_definition

    T_ID  shift, and go to state 20

    $default  reduce using rule 17 (plus_variable_definition)

    plus_variable_definition  go to state 34
    variable_definition       go to state 22
    variable_group            go to state 23


state 23

   19 variable_definition: variable_group . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 35


state 24

   28 init_procedure: T_PROCEDURE . T_ID

    T_ID  shift, and go to state 36


state 25

    3 block_body: opt_constant_definition_part opt_variable_definition_part star_procedure_definition . compound_statement

    T_BEGIN  shift, and go to state 37

    compound_statement  go to state 38


state 26

    9 star_procedure_definition: procedure_definition . star_procedure_definition

    T_PROCEDURE  shift, and go to state 24

    $default  reduce using rule 8 (star_procedure_definition)

    star_procedure_definition  go to state 39
    procedure_definition       go to state 26
    procedure_block            go to state 27
    init_procedure             go to state 28


state 27

   26 procedure_definition: procedure_block . block_body T_SEMICOLON

    T_CONST  shift, and go to state 7

    $default  reduce using rule 4 (opt_constant_definition_part)

    block_body                    go to state 40
    opt_constant_definition_part  go to state 9
    constant_definition_part      go to state 10


state 28

   27 procedure_block: init_procedure . opt_brc_formal_parameter_list_brc T_SEMICOLON

    T_LBRACKET  shift, and go to state 41

    $default  reduce using rule 29 (opt_brc_formal_parameter_list_brc)

    opt_brc_formal_parameter_list_brc  go to state 42


state 29

   13 constant_definition: T_ID T_EQ T_INT_CONST . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 43


state 30

   14 constant_definition: T_ID T_EQ T_REAL_CONST . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 44


state 31

   15 constant_definition: T_ID T_EQ T_BOOLEAN_CONST . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 45


state 32

   22 star_comma_id: T_COMMA . T_ID star_comma_id

    T_ID  shift, and go to state 46


state 33

   20 variable_group: T_ID star_comma_id . T_COLON type

    T_COLON  shift, and go to state 47


state 34

   18 plus_variable_definition: variable_definition plus_variable_definition .

    $default  reduce using rule 18 (plus_variable_definition)


state 35

   19 variable_definition: variable_group T_SEMICOLON .

    $default  reduce using rule 19 (variable_definition)


state 36

   28 init_procedure: T_PROCEDURE T_ID .

    $default  reduce using rule 28 (init_procedure)


state 37

   52 compound_statement: T_BEGIN . statement star_comma_statement T_END

    T_ID     shift, and go to state 48
    T_BEGIN  shift, and go to state 37
    T_IF     shift, and go to state 49
    T_WHILE  shift, and go to state 50

    $default  reduce using rule 35 (statement)

    statement             go to state 51
    assignment_statement  go to state 52
    procedure_statement   go to state 53
    if_statement          go to state 54
    while_statement       go to state 55
    compound_statement    go to state 56
    variable_access       go to state 57


state 38

    3 block_body: opt_constant_definition_part opt_variable_definition_part star_procedure_definition compound_statement .

    $default  reduce using rule 3 (block_body)


state 39

    9 star_procedure_definition: procedure_definition star_procedure_definition .

    $default  reduce using rule 9 (star_procedure_definition)


state 40

   26 procedure_definition: procedure_block block_body . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 58


state 41

   30 opt_brc_formal_parameter_list_brc: T_LBRACKET . formal_parameter_list T_RBRACKET

    T_ID  shift, and go to state 20

    variable_group         go to state 59
    formal_parameter_list  go to state 60
    parameter_definition   go to state 61


state 42

   27 procedure_block: init_procedure opt_brc_formal_parameter_list_brc . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 62


state 43

   13 constant_definition: T_ID T_EQ T_INT_CONST T_SEMICOLON .

    $default  reduce using rule 13 (constant_definition)


state 44

   14 constant_definition: T_ID T_EQ T_REAL_CONST T_SEMICOLON .

    $default  reduce using rule 14 (constant_definition)


state 45

   15 constant_definition: T_ID T_EQ T_BOOLEAN_CONST T_SEMICOLON .

    $default  reduce using rule 15 (constant_definition)


state 46

   22 star_comma_id: T_COMMA T_ID . star_comma_id

    T_COMMA  shift, and go to state 32

    $default  reduce using rule 21 (star_comma_id)

    star_comma_id  go to state 63


state 47

   20 variable_group: T_ID star_comma_id T_COLON . type

    T_INTEGER  shift, and go to state 64
    T_REAL     shift, and go to state 65
    T_BOOLEAN  shift, and go to state 66

    type  go to state 67


state 48

   42 procedure_statement: T_ID . opt_brc_actual_parameter_list_brc
   84 variable_access: T_ID .

    T_LBRACKET  shift, and go to state 68

    T_ASSIGN  reduce using rule 84 (variable_access)
    $default  reduce using rule 43 (opt_brc_actual_parameter_list_brc)

    opt_brc_actual_parameter_list_brc  go to state 69


state 49

   49 if_statement: T_IF . expression T_THEN statement
   50             | T_IF . expression T_THEN statement T_ELSE statement

    T_ID             shift, and go to state 70
    T_INT_CONST      shift, and go to state 71
    T_REAL_CONST     shift, and go to state 72
    T_BOOLEAN_CONST  shift, and go to state 73
    T_PLUS           shift, and go to state 74
    T_MINUS          shift, and go to state 75
    T_NOT            shift, and go to state 76
    T_LBRACKET       shift, and go to state 77

    expression         go to state 78
    simple_expression  go to state 79
    sign_operator      go to state 80
    term               go to state 81
    factor             go to state 82
    variable_access    go to state 83
    constant           go to state 84


state 50

   51 while_statement: T_WHILE . expression T_DO statement

    T_ID             shift, and go to state 70
    T_INT_CONST      shift, and go to state 71
    T_REAL_CONST     shift, and go to state 72
    T_BOOLEAN_CONST  shift, and go to state 73
    T_PLUS           shift, and go to state 74
    T_MINUS          shift, and go to state 75
    T_NOT            shift, and go to state 76
    T_LBRACKET       shift, and go to state 77

    expression         go to state 85
    simple_expression  go to state 79
    sign_operator      go to state 80
    term               go to state 81
    factor             go to state 82
    variable_access    go to state 83
    constant           go to state 84


state 51

   52 compound_statement: T_BEGIN statement . star_comma_statement T_END

    T_SEMICOLON  shift, and go to state 86

    $default  reduce using rule 53 (star_comma_statement)

    star_comma_statement  go to state 87


state 52

   40 statement: assignment_statement .

    $default  reduce using rule 40 (statement)


state 53

   36 statement: procedure_statement .

    $default  reduce using rule 36 (statement)


state 54

   37 statement: if_statement .

    $default  reduce using rule 37 (statement)


state 55

   38 statement: while_statement .

    $default  reduce using rule 38 (statement)


state 56

   39 statement: compound_statement .

    $default  reduce using rule 39 (statement)


state 57

   41 assignment_statement: variable_access . T_ASSIGN expression

    T_ASSIGN  shift, and go to state 88


state 58

   26 procedure_definition: procedure_block block_body T_SEMICOLON .

    $default  reduce using rule 26 (procedure_definition)


state 59

   34 parameter_definition: variable_group .

    $default  reduce using rule 34 (parameter_definition)


state 60

   30 opt_brc_formal_parameter_list_brc: T_LBRACKET formal_parameter_list . T_RBRACKET

    T_RBRACKET  shift, and go to state 89


state 61

   31 formal_parameter_list: parameter_definition . star_smc_parameter_definition

    T_SEMICOLON  shift, and go to state 90

    $default  reduce using rule 32 (star_smc_parameter_definition)

    star_smc_parameter_definition  go to state 91


state 62

   27 procedure_block: init_procedure opt_brc_formal_parameter_list_brc T_SEMICOLON .

    $default  reduce using rule 27 (procedure_block)


state 63

   22 star_comma_id: T_COMMA T_ID star_comma_id .

    $default  reduce using rule 22 (star_comma_id)


state 64

   23 type: T_INTEGER .

    $default  reduce using rule 23 (type)


state 65

   24 type: T_REAL .

    $default  reduce using rule 24 (type)


state 66

   25 type: T_BOOLEAN .

    $default  reduce using rule 25 (type)


state 67

   20 variable_group: T_ID star_comma_id T_COLON type .

    $default  reduce using rule 20 (variable_group)


state 68

   44 opt_brc_actual_parameter_list_brc: T_LBRACKET . actual_parameter_list T_RBRACKET

    T_ID             shift, and go to state 70
    T_INT_CONST      shift, and go to state 71
    T_REAL_CONST     shift, and go to state 72
    T_BOOLEAN_CONST  shift, and go to state 73
    T_PLUS           shift, and go to state 74
    T_MINUS          shift, and go to state 75
    T_NOT            shift, and go to state 76
    T_LBRACKET       shift, and go to state 77

    actual_parameter_list  go to state 92
    actual_parameter       go to state 93
    expression             go to state 94
    simple_expression      go to state 79
    sign_operator          go to state 80
    term                   go to state 81
    factor                 go to state 82
    variable_access        go to state 83
    constant               go to state 84


state 69

   42 procedure_statement: T_ID opt_brc_actual_parameter_list_brc .

    $default  reduce using rule 42 (procedure_statement)


state 70

   84 variable_access: T_ID .

    $default  reduce using rule 84 (variable_access)


state 71

   85 constant: T_INT_CONST .

    $default  reduce using rule 85 (constant)


state 72

   86 constant: T_REAL_CONST .

    $default  reduce using rule 86 (constant)


state 73

   87 constant: T_BOOLEAN_CONST .

    $default  reduce using rule 87 (constant)


state 74

   66 sign_operator: T_PLUS .

    $default  reduce using rule 66 (sign_operator)


state 75

   67 sign_operator: T_MINUS .

    $default  reduce using rule 67 (sign_operator)


state 76

   83 factor: T_NOT . factor

    T_ID             shift, and go to state 70
    T_INT_CONST      shift, and go to state 71
    T_REAL_CONST     shift, and go to state 72
    T_BOOLEAN_CONST  shift, and go to state 73
    T_NOT            shift, and go to state 76
    T_LBRACKET       shift, and go to state 77

    factor           go to state 95
    variable_access  go to state 83
    constant         go to state 84


state 77

   82 factor: T_LBRACKET . expression T_RBRACKET

    T_ID             shift, and go to state 70
    T_INT_CONST      shift, and go to state 71
    T_REAL_CONST     shift, and go to state 72
    T_BOOLEAN_CONST  shift, and go to state 73
    T_PLUS           shift, and go to state 74
    T_MINUS          shift, and go to state 75
    T_NOT            shift, and go to state 76
    T_LBRACKET       shift, and go to state 77

    expression         go to state 96
    simple_expression  go to state 79
    sign_operator      go to state 80
    term               go to state 81
    factor             go to state 82
    variable_access    go to state 83
    constant           go to state 84


state 78

   49 if_statement: T_IF expression . T_THEN statement
   50             | T_IF expression . T_THEN statement T_ELSE statement

    T_THEN  shift, and go to state 97


state 79

   55 expression: simple_expression . opt_relational_operator_simple_expression

    T_EQ   shift, and go to state 98
    T_DIF  shift, and go to state 99
    T_LT   shift, and go to state 100
    T_LEQ  shift, and go to state 101
    T_GT   shift, and go to state 102
    T_GEQ  shift, and go to state 103

    $default  reduce using rule 56 (opt_relational_operator_simple_expression)

    opt_relational_operator_simple_expression  go to state 104
    relational_operator                        go to state 105


state 80

   64 simple_expression: sign_operator . term star_adding_operator_term

    T_ID             shift, and go to state 70
    T_INT_CONST      shift, and go to state 71
    T_REAL_CONST     shift, and go to state 72
    T_BOOLEAN_CONST  shift, and go to state 73
    T_NOT            shift, and go to state 76
    T_LBRACKET       shift, and go to state 77

    term             go to state 106
    factor           go to state 82
    variable_access  go to state 83
    constant         go to state 84


state 81

   65 simple_expression: term . star_adding_operator_term

    T_PLUS   shift, and go to state 107
    T_MINUS  shift, and go to state 108
    T_OR     shift, and go to state 109

    $default  reduce using rule 68 (star_adding_operator_term)

    star_adding_operator_term  go to state 110
    adding_operator            go to state 111


state 82

   73 term: factor . star_multiplying_operator_factor

    T_TIMES   shift, and go to state 112
    T_DIVIDE  shift, and go to state 113
    T_DIV     shift, and go to state 114
    T_MOD     shift, and go to state 115
    T_AND     shift, and go to state 116

    $default  reduce using rule 74 (star_multiplying_operator_factor)

    star_multiplying_operator_factor  go to state 117
    multiplying_operator              go to state 118


state 83

   88 constant: variable_access .

    $default  reduce using rule 88 (constant)


state 84

   81 factor: constant .

    $default  reduce using rule 81 (factor)


state 85

   51 while_statement: T_WHILE expression . T_DO statement

    T_DO  shift, and go to state 119


state 86

   54 star_comma_statement: T_SEMICOLON . statement star_comma_statement

    T_ID     shift, and go to state 48
    T_BEGIN  shift, and go to state 37
    T_IF     shift, and go to state 49
    T_WHILE  shift, and go to state 50

    $default  reduce using rule 35 (statement)

    statement             go to state 120
    assignment_statement  go to state 52
    procedure_statement   go to state 53
    if_statement          go to state 54
    while_statement       go to state 55
    compound_statement    go to state 56
    variable_access       go to state 57


state 87

   52 compound_statement: T_BEGIN statement star_comma_statement . T_END

    T_END  shift, and go to state 121


state 88

   41 assignment_statement: variable_access T_ASSIGN . expression

    T_ID             shift, and go to state 70
    T_INT_CONST      shift, and go to state 71
    T_REAL_CONST     shift, and go to state 72
    T_BOOLEAN_CONST  shift, and go to state 73
    T_PLUS           shift, and go to state 74
    T_MINUS          shift, and go to state 75
    T_NOT            shift, and go to state 76
    T_LBRACKET       shift, and go to state 77

    expression         go to state 122
    simple_expression  go to state 79
    sign_operator      go to state 80
    term               go to state 81
    factor             go to state 82
    variable_access    go to state 83
    constant           go to state 84


state 89

   30 opt_brc_formal_parameter_list_brc: T_LBRACKET formal_parameter_list T_RBRACKET .

    $default  reduce using rule 30 (opt_brc_formal_parameter_list_brc)


state 90

   33 star_smc_parameter_definition: T_SEMICOLON . parameter_definition star_smc_parameter_definition

    T_ID  shift, and go to state 20

    variable_group        go to state 59
    parameter_definition  go to state 123


state 91

   31 formal_parameter_list: parameter_definition star_smc_parameter_definition .

    $default  reduce using rule 31 (formal_parameter_list)


state 92

   44 opt_brc_actual_parameter_list_brc: T_LBRACKET actual_parameter_list . T_RBRACKET

    T_RBRACKET  shift, and go to state 124


state 93

   45 actual_parameter_list: actual_parameter . star_comma_actual_parameter

    T_COMMA  shift, and go to state 125

    $default  reduce using rule 46 (star_comma_actual_parameter)

    star_comma_actual_parameter  go to state 126


state 94

   48 actual_parameter: expression .

    $default  reduce using rule 48 (actual_parameter)


state 95

   83 factor: T_NOT factor .

    $default  reduce using rule 83 (factor)


state 96

   82 factor: T_LBRACKET expression . T_RBRACKET

    T_RBRACKET  shift, and go to state 127


state 97

   49 if_statement: T_IF expression T_THEN . statement
   50             | T_IF expression T_THEN . statement T_ELSE statement

    T_ID     shift, and go to state 48
    T_BEGIN  shift, and go to state 37
    T_IF     shift, and go to state 49
    T_WHILE  shift, and go to state 50

    $default  reduce using rule 35 (statement)

    statement             go to state 128
    assignment_statement  go to state 52
    procedure_statement   go to state 53
    if_statement          go to state 54
    while_statement       go to state 55
    compound_statement    go to state 56
    variable_access       go to state 57


state 98

   59 relational_operator: T_EQ .

    $default  reduce using rule 59 (relational_operator)


state 99

   62 relational_operator: T_DIF .

    $default  reduce using rule 62 (relational_operator)


state 100

   58 relational_operator: T_LT .

    $default  reduce using rule 58 (relational_operator)


state 101

   61 relational_operator: T_LEQ .

    $default  reduce using rule 61 (relational_operator)


state 102

   60 relational_operator: T_GT .

    $default  reduce using rule 60 (relational_operator)


state 103

   63 relational_operator: T_GEQ .

    $default  reduce using rule 63 (relational_operator)


state 104

   55 expression: simple_expression opt_relational_operator_simple_expression .

    $default  reduce using rule 55 (expression)


state 105

   57 opt_relational_operator_simple_expression: relational_operator . simple_expression

    T_ID             shift, and go to state 70
    T_INT_CONST      shift, and go to state 71
    T_REAL_CONST     shift, and go to state 72
    T_BOOLEAN_CONST  shift, and go to state 73
    T_PLUS           shift, and go to state 74
    T_MINUS          shift, and go to state 75
    T_NOT            shift, and go to state 76
    T_LBRACKET       shift, and go to state 77

    simple_expression  go to state 129
    sign_operator      go to state 80
    term               go to state 81
    factor             go to state 82
    variable_access    go to state 83
    constant           go to state 84


state 106

   64 simple_expression: sign_operator term . star_adding_operator_term

    T_PLUS   shift, and go to state 107
    T_MINUS  shift, and go to state 108
    T_OR     shift, and go to state 109

    $default  reduce using rule 68 (star_adding_operator_term)

    star_adding_operator_term  go to state 130
    adding_operator            go to state 111


state 107

   70 adding_operator: T_PLUS .

    $default  reduce using rule 70 (adding_operator)


state 108

   71 adding_operator: T_MINUS .

    $default  reduce using rule 71 (adding_operator)


state 109

   72 adding_operator: T_OR .

    $default  reduce using rule 72 (adding_operator)


state 110

   65 simple_expression: term star_adding_operator_term .

    $default  reduce using rule 65 (simple_expression)


state 111

   69 star_adding_operator_term: adding_operator . term star_adding_operator_term

    T_ID             shift, and go to state 70
    T_INT_CONST      shift, and go to state 71
    T_REAL_CONST     shift, and go to state 72
    T_BOOLEAN_CONST  shift, and go to state 73
    T_NOT            shift, and go to state 76
    T_LBRACKET       shift, and go to state 77

    term             go to state 131
    factor           go to state 82
    variable_access  go to state 83
    constant         go to state 84


state 112

   76 multiplying_operator: T_TIMES .

    $default  reduce using rule 76 (multiplying_operator)


state 113

   80 multiplying_operator: T_DIVIDE .

    $default  reduce using rule 80 (multiplying_operator)


state 114

   77 multiplying_operator: T_DIV .

    $default  reduce using rule 77 (multiplying_operator)


state 115

   78 multiplying_operator: T_MOD .

    $default  reduce using rule 78 (multiplying_operator)


state 116

   79 multiplying_operator: T_AND .

    $default  reduce using rule 79 (multiplying_operator)


state 117

   73 term: factor star_multiplying_operator_factor .

    $default  reduce using rule 73 (term)


state 118

   75 star_multiplying_operator_factor: multiplying_operator . factor star_multiplying_operator_factor

    T_ID             shift, and go to state 70
    T_INT_CONST      shift, and go to state 71
    T_REAL_CONST     shift, and go to state 72
    T_BOOLEAN_CONST  shift, and go to state 73
    T_NOT            shift, and go to state 76
    T_LBRACKET       shift, and go to state 77

    factor           go to state 132
    variable_access  go to state 83
    constant         go to state 84


state 119

   51 while_statement: T_WHILE expression T_DO . statement

    T_ID     shift, and go to state 48
    T_BEGIN  shift, and go to state 37
    T_IF     shift, and go to state 49
    T_WHILE  shift, and go to state 50

    $default  reduce using rule 35 (statement)

    statement             go to state 133
    assignment_statement  go to state 52
    procedure_statement   go to state 53
    if_statement          go to state 54
    while_statement       go to state 55
    compound_statement    go to state 56
    variable_access       go to state 57


state 120

   54 star_comma_statement: T_SEMICOLON statement . star_comma_statement

    T_SEMICOLON  shift, and go to state 86

    $default  reduce using rule 53 (star_comma_statement)

    star_comma_statement  go to state 134


state 121

   52 compound_statement: T_BEGIN statement star_comma_statement T_END .

    $default  reduce using rule 52 (compound_statement)


state 122

   41 assignment_statement: variable_access T_ASSIGN expression .

    $default  reduce using rule 41 (assignment_statement)


state 123

   33 star_smc_parameter_definition: T_SEMICOLON parameter_definition . star_smc_parameter_definition

    T_SEMICOLON  shift, and go to state 90

    $default  reduce using rule 32 (star_smc_parameter_definition)

    star_smc_parameter_definition  go to state 135


state 124

   44 opt_brc_actual_parameter_list_brc: T_LBRACKET actual_parameter_list T_RBRACKET .

    $default  reduce using rule 44 (opt_brc_actual_parameter_list_brc)


state 125

   47 star_comma_actual_parameter: T_COMMA . actual_parameter star_comma_actual_parameter

    T_ID             shift, and go to state 70
    T_INT_CONST      shift, and go to state 71
    T_REAL_CONST     shift, and go to state 72
    T_BOOLEAN_CONST  shift, and go to state 73
    T_PLUS           shift, and go to state 74
    T_MINUS          shift, and go to state 75
    T_NOT            shift, and go to state 76
    T_LBRACKET       shift, and go to state 77
